--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -15,6 +15,6 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         server: ftp.giga-home-improvement.com
-        username: ${{ secrets.ftp_username_staging }}
-        password: ${{ secrets.ftp_password_staging }}
+        username: ${{ secrets.FTP_USERNAME_STAGING }}
+        password: ${{ secrets.FTP_PASSWORD }}
         server-dir: /home/gigaymgl/staging.giga-home-improvement.com
